# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "takeoff_cli"
description = "Bring-your-own-site static site generator."
version = "0.1.1"
authors = ["Bauke <me@bauke.xyz>"]
license = "MIT OR Apache-2.0"
homepage = "https://takeoff.bauke.xyz"
repository = "https://github.com/Bauke/takeoff"
readme = "../README.md"
edition = "2018"

[[bin]]
name = "takeoff"
path = "source/main.rs"

[dependencies]
anyhow = "1.0"
clap = "2.33"
takeoff = { path = "../takeoff", version = "0.1.1" }
tracing-subscriber = "0.2"
